# stubdefaulter

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  stdlib-blacklist.txt  stubdefaulter.py  test_stubdefaulter.py
.github/scripts/: typeshed_primer_download_diff.js  typeshed_primer_post_comment.js
.github/workflows/: check.yml  lint.yml  pyanalyze.yml  pycroscope.yml  typeshed_primer.yml  typeshed_primer_comment.yml
stubdefaulter/: __init__.py  __main__.py  stdlib-blacklist.txt  typeshed-blacklist.txt
