[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "stubdefaulter"
version = "0.1.0"
description = "Autoadd default values to stubs"
requires-python = ">=3.7"
dependencies = ["libcst", "termcolor>=2", "typeshed_client>=2.2.0", "tomli"]
license = "MIT"

[project.scripts]
stubdefaulter = "stubdefaulter:main"

[project.optional-dependencies]
pyanalyze = ["pyanalyze==0.9.0"]
dev = [
    "stubdefaulter[pyanalyze]",
    "black==22.12.0",            # Must match .pre-commit-config.yaml
    "flake8-bugbear==23.1.20",
    "flake8-noqa==1.3.0",
    "isort==5.12.0",             # Must match .pre-commit-config.yaml
    "mypy==0.991",
    "pre-commit-hooks==4.4.0",   # Must match .pre-commit-config.yaml
    "pytest",
]

[tool.hatch.build]
packages = ["stubdefaulter"]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
skip_gitignore = true
