[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "stubdefaulter"
version = "0.1.0"
description = "Autoadd default values to stubs"
requires-python = ">=3.9"
dependencies = ["libcst", "termcolor>=2", "typeshed_client>=2.2.0", "tomli"]
license = "MIT"
readme = "README.md"

[project.urls]
Home = "https://github.com/JelleZijlstra/stubdefaulter"
Repository = "https://github.com/JelleZijlstra/stubdefaulter"
"Bug Tracker" = "https://github.com/JelleZijlstra/stubdefaulter/issues"

[project.scripts]
stubdefaulter = "stubdefaulter:main"

[[project.authors]]
name = "Jelle Zijlstra, Alex Waygood"
email = "jelle.zijlstra@gmail.com"

[project.optional-dependencies]
pyanalyze = ["pyanalyze==0.10.1"]
dev = [
    "stubdefaulter[pyanalyze]",
    "black==23.3.0",             # Must match .pre-commit-config.yaml
    "flake8-bugbear==23.6.5",
    "flake8-noqa==1.3.1",
    "isort==5.12.0",             # Must match .pre-commit-config.yaml
    "mypy==1.3.0",
    "pre-commit-hooks==4.4.0",   # Must match .pre-commit-config.yaml
    "pytest",
]

[tool.hatch.build]
packages = ["stubdefaulter"]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true
skip_gitignore = true
