[build-system]
requires = ["hatchling>=1.11.0"]
build-backend = "hatchling.build"

[project]
name = "stubdefaulter"
version = "0.1.0"
description = "Auto-add default values to stubs"
requires-python = ">=3.9"
dependencies = ["libcst", "termcolor>=2", "typeshed_client>=2.2.0", "tomli"]
license = "MIT"
readme = "README.md"

[project.urls]
Home = "https://github.com/JelleZijlstra/stubdefaulter"
Repository = "https://github.com/JelleZijlstra/stubdefaulter"
"Bug Tracker" = "https://github.com/JelleZijlstra/stubdefaulter/issues"

[project.scripts]
stubdefaulter = "stubdefaulter:main"

[[project.authors]]
name = "Jelle Zijlstra, Alex Waygood"
email = "jelle.zijlstra@gmail.com"

[dependency-groups]
dev = ["pytest", "pycroscope==0.2.0"]

[tool.hatch.build]
packages = ["stubdefaulter"]

[tool.mypy]
show_traceback = true
pretty = true
strict = true
enable_error_code = 'ignore-without-code,redundant-expr,possibly-undefined'
warn_unreachable = true

[tool.ruff]
fix = true

[tool.ruff.lint]
select = [
    "E",
    "F",
    "B",
    "C4",
    "I",
    "W",
    "UP",
]
ignore = [
    # These are all enforced by, or incompatible with, Black:
    "E203",
    "E501",
    "W291",
    "W293",
    # It's often necessary to compare types instead of using isinstance()
    "E721",
    # Makes code slower and more verbose
    # https://github.com/astral-sh/ruff/issues/7871
    "UP038",
]
unfixable = [
    "F841",    # unused variable. ruff keeps the call, but mostly we want to get rid of it all
    "F601",    # automatic fix might obscure issue
    "F602",    # automatic fix might obscure issue
    "B018",    # automatic fix might obscure issue
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false
